--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,18 @@
-name: C/C++ CI with GoogleTest
+name: C/C++ CI
 
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+on: [push, pull_request]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     
-    #- name: installation
-    #  run: sudo apt install -y googletest libgtest-dev build-essential gcovr libpng-dev
-
-    #- name: Compile with Sigmoid activation
-     # run: |
-      #  cd src
-       # g++ -I../lib main.cpp NN.cpp ../lib/matrix.cpp -o main_sigmoid -std=c++11
-
-    #- name: Run Sigmoid activation
-     # run: |
-      #  cd src
-       # echo "1" | ./main_sigmoid
-
-#    - name: Compile with Tanh activation  
- #     run: |
-  #      cd src
-   #     g++ -DUSE_TANH -I../lib main.cpp NN.cpp ../lib/matrix.cpp -o main_tanh -std=c++11
-
-    #- name: Run Tanh activation
-  #    run: |
-   #     cd src
-    #    echo "2" | ./main_tanh
-
-   # - name: Compile unit tests
-    #  run: |
-     #   cd src
-      #  g++ -DTESTS -I../lib main.cpp NN.cpp ../lib/matrix.cpp -o test_app -lgtest -lgtest_main -lpthread -std=c++11
-
-#    - name: Run unit tests
- #     run: |
-  #      cd src
-   #     ./test_app
+    - name: Install and test
+      run: |
+        sudo apt update
+        sudo apt install -y libgtest-dev build-essential libpng-dev
+        cd /usr/src/gtest && sudo cmake . && sudo make && sudo cp lib/*.a /usr/lib
+        cd /home/runner/work/DigitML/DigitML/src
+        g++ -DTESTS -I../lib main.cpp NN.cpp ../lib/matrix.cpp -o test_app -lgtest -lgtest_main -lpthread -std=c++11
+        ./test_app
