--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,6 +17,10 @@ jobs:
     - name: installation
       run: sudo apt install -y googletest libgtest-dev build-essential gcovr libpng-dev
 
+    - name: Compile project
+      run: |
+        g++ -Ilib src/main.cpp src/NN.cpp lib/matrix.cpp -o main -std=c++11
+
     - name: Compile with Sigmoid activation
       run: |
         cd src
